--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
   "tasks": {
-    "ping": "git add . && git commit -am 'update' && git push origin main && deno run -A ../tasks/ping.ts"
+    "ping": "git add . && git commit -am 'update' && git push origin main && deno run -A /tasks/ping.ts"
   }
 }
